完成采样点数的新增1024

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -276,6 +276,7 @@
                 android:textSize="@dimen/textNormSize" />
 
             <TextView
+                android:id="@+id/mtv_samplenum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="512"
