--- a/app/src/main/res/layout/my_dialog_tky.xml
+++ b/app/src/main/res/layout/my_dialog_tky.xml
@@ -2,8 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -466,7 +464,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical">
@@ -507,6 +505,7 @@
                     android:layout_weight="1"
                     android:baselineAligned="false"
                     android:text="返回"
+                    android:textSize="@dimen/textNormSize"
                     android:textColor="#000" />
 
                 <Button
@@ -517,11 +516,11 @@
                     android:layout_weight="1"
                     android:baselineAligned="false"
                     android:text="确定上传"
+                    android:textSize="@dimen/textNormSize"
                     android:textColor="#000" />
             </LinearLayout>
 
         </LinearLayout>
-
 
     </LinearLayout>
     <FrameLayout
